# celeste-structured-output

./: .env.example  .gitignore  README.md  example.py  pyproject.toml
src/celeste_structured_output/: __init__.py  base.py
src/celeste_structured_output/core/: __init__.py  config.py  enums.py  types.py
src/celeste_structured_output/providers/: __init__.py  anthropic.py  google.py  huggingface.py  mistral.py  ollama.py  openai.py
